--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -7,6 +7,22 @@
 		<link rel="stylesheet" href="./style/style.css" />
 	</head>
 	<body>
+		<p>Text1</p>
+		<p class="find">
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis explicabo
+			rerum consequuntur voluptatibus aliquam hic autem voluptas aspernatur.
+			Sapiente voluptatem quis optio ab eveniet. Cumque provident id distinctio
+			sit sed?
+		</p>
+		<p class="p3">Text3</p>
+		<p id="p4">Text4</p>
+		<div class="block1">
+			<p>Text5</p>
+		</div>
+		<p class="p6">Text <span>text1</span></p>
+
+		<a href="">Google</a>
+
 		<script src="./script/script.js"></script>
 	</body>
 </html>
