--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -23,6 +23,15 @@
 
 		<a href="">Google</a>
 
+		<div class="main">
+			<img src="" alt="" /><img src="" alt="" /><img src="" alt="" /><img
+				src=""
+				alt=""
+			/><img src="" alt="" /><img src="" alt="" /><img src="" alt="" /><img
+				src=""
+				alt=""
+			/><img src="" alt="" /><img src="" alt="" />
+		</div>
 		<script src="./script/script.js"></script>
 	</body>
 </html>
