--- a/lesson10/index1.html
+++ b/lesson10/index1.html
@@ -15,5 +15,13 @@
 				<button type="submit">Добавить</button>
 			</form>
 		</div>
+		<div class="products_list_container">
+			<!-- <p class="empty_p">Товаров нет</p> -->
+			<!-- <div class="product_card">
+				<p>Macbook</p>
+				<p>1200</p>
+				<button class="remove_btn">X</button>
+			</div> -->
+		</div>
 	</body>
 </html>
