--- a/Pro/Practice/lesson1/index.html
+++ b/Pro/Practice/lesson1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Practice</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         p {
             color: cornflowerblue;
